--- a/app/Resources/translations/messages.pl.yml
+++ b/app/Resources/translations/messages.pl.yml
@@ -63,6 +63,7 @@ description: Opis
 language: Języki
 theme: Motyw
 timezone: 'Strefa czasowa'
+timestamp: Czas
 user.confirm.delete: 'Czy jesteś pewien, że chesz usunąć wybrane konto?'
 password.too_short: 'Hasło powinno mieć co najmniej %length% znaków.'
 passwords.dont_match: 'Hasła nie są identyczne.'
@@ -189,3 +190,17 @@ record.id: ID
 record.subject: Temat
 record.age: Wiek
 record.no_fields: 'Brak pól.'
+record.history: Historia
+event.record_created: 'Rekord został utworzony ze statusem: "%value%".'
+event.record_edited: 'Rekord został zmodyfikowany.'
+event.record_assigned: 'Rekord został przypisany do %value%.'
+event.state_changed: 'Status został zmieniony do "%value%".'
+event.record_postponed: 'Rekord opóźni się do %value%.'
+event.record_resumed: 'Rekord został wznowiony.'
+event.record_cloned: 'Rekord został skopiowany z "%value%".'
+event.record_reopened: 'Rekord został wznowiony ze statusem "%value%".'
+event.comment_added: 'Komentarz został dodany.'
+event.file_attached: 'Plik "%value%" został dołączony.'
+event.file_deleted: 'Plik "%value%" został usunięty.'
+event.subrecord_attached: 'Subrekord "%value%" został dodany.'
+event.subrecord_detached: 'Subrekord "%value%" został usunięty.'
