--- a/app/Resources/translations/messages.de.yml
+++ b/app/Resources/translations/messages.de.yml
@@ -204,3 +204,4 @@ event.file_attached: 'Datei "%value%" wird angehangen.'
 event.file_deleted: 'Datei "%value%" wird entfernt.'
 event.subrecord_attached: 'Unteranfrage wird "%value%" hinzugefügt.'
 event.subrecord_detached: 'Unteranfrage wird von "%value%" entfernt.'
+error.file_max_size: 'Diese Datei kann nicht hochgeladen werden, da sie die maximale Dateigröße von (%max_size% KB) überschreitet.'
