--- a/app/Resources/translations/messages.es.yml
+++ b/app/Resources/translations/messages.es.yml
@@ -204,3 +204,4 @@ event.file_attached: 'Se adjuntó el archivo "%value%".'
 event.file_deleted: 'El archivo "%value%" fue eliminado.'
 event.subrecord_attached: 'El subregistro "%value%" fue añadido.'
 event.subrecord_detached: 'El subregistro "%value%" fue eliminado.'
+error.file_max_size: 'Este fichero no se puede adjuntar porque excede el tamaño máximo de fichero (%max_size% KB).'
