--- a/app/Resources/translations/messages.hu.yml
+++ b/app/Resources/translations/messages.hu.yml
@@ -204,3 +204,4 @@ event.file_attached: 'A(z) "%value%" csatolva.'
 event.file_deleted: 'A(z) "%value%" nevű fájl törölve.'
 event.subrecord_attached: 'A(z) "%value%" alrekord létrehozva.'
 event.subrecord_detached: 'A(z) "%value%" alrekord törölve.'
+error.file_max_size: 'This file cannot be uploaded because it exceeds the maximum allowed file size (%max_size% KB).'
