--- a/app/Resources/translations/messages.it.yml
+++ b/app/Resources/translations/messages.it.yml
@@ -204,3 +204,4 @@ event.file_attached: 'Il file "%value%" è stato allegato.'
 event.file_deleted: 'Il file "%value%" è stato rimosso.'
 event.subrecord_attached: 'Il subrecord "%value%" è stato aggiunto.'
 event.subrecord_detached: 'Il subrecord "%value%" è stato rimosso.'
+error.file_max_size: 'Questo file non può essere caricato in quanto la sua dimensione supera la massima consentita (%max_size% KB).'
