--- a/app/Resources/translations/messages.lv.yml
+++ b/app/Resources/translations/messages.lv.yml
@@ -204,3 +204,4 @@ event.file_attached: 'Fails "%value%" tika pievienots'
 event.file_deleted: 'Fails "%value%" tika dzēsts'
 event.subrecord_attached: 'Pievienots "%value%" pēctecis.'
 event.subrecord_detached: 'Novākts „%value%” pēctecis.'
+error.file_max_size: 'This file cannot be uploaded because it exceeds the maximum allowed file size (%max_size% KB).'
