--- a/app/Resources/translations/messages.nl.yml
+++ b/app/Resources/translations/messages.nl.yml
@@ -204,3 +204,4 @@ event.file_attached: 'Bestand "%value%" is bijgevoegd.'
 event.file_deleted: 'Bestand "%value%" is verwijderd.'
 event.subrecord_attached: 'Subrecord "%value%" is toegevoegd.'
 event.subrecord_detached: 'Subrecord "%value%" is verwijderd.'
+error.file_max_size: 'Dit bestand kan niet worden geupload omdat het de maximaal toegestane grootte overschrijd (%max_size% KB).'
