--- a/app/Resources/translations/messages.pl.yml
+++ b/app/Resources/translations/messages.pl.yml
@@ -204,3 +204,4 @@ event.file_attached: 'Plik "%value%" został dołączony.'
 event.file_deleted: 'Plik "%value%" został usunięty.'
 event.subrecord_attached: 'Subrekord "%value%" został dodany.'
 event.subrecord_detached: 'Subrekord "%value%" został usunięty.'
+error.file_max_size: 'Plik nie może być przesłany, ponieważ przekracza maksymalny dopuszczalny rozmial (%max_size% KB).'
