--- a/app/Resources/translations/messages.ro.yml
+++ b/app/Resources/translations/messages.ro.yml
@@ -204,3 +204,4 @@ event.file_attached: 'Fisierul "%value%" este atasat.'
 event.file_deleted: 'Fisierul "%value%" este sters.'
 event.subrecord_attached: 'Inregistrarea fiu "%value%" este adaugata.'
 event.subrecord_detached: 'Inregistrarea fiu "%value%" este stearsa.'
+error.file_max_size: 'This file cannot be uploaded because it exceeds the maximum allowed file size (%max_size% KB).'
