--- a/app/Resources/translations/messages.ru.yml
+++ b/app/Resources/translations/messages.ru.yml
@@ -204,3 +204,4 @@ event.file_attached: 'Файл "%value%" прикреплен.'
 event.file_deleted: 'Файл "%value%" удален.'
 event.subrecord_attached: 'Добавлена подзапись "%value%".'
 event.subrecord_detached: 'Удалена подзапись "%value%".'
+error.file_max_size: 'Этот файл нельзя загрузить из-за превышения максимального размера файла (%max_size% КБ).'
