--- a/app/Resources/translations/messages.sv.yml
+++ b/app/Resources/translations/messages.sv.yml
@@ -204,3 +204,4 @@ event.file_attached: 'Filen "%value%" är bifogad.'
 event.file_deleted: 'Filen "%value%" är borttagen.'
 event.subrecord_attached: 'Underpost "%value%" är tilllagd.'
 event.subrecord_detached: 'Underpost "%value%" är borttagen.'
+error.file_max_size: 'Denna fil kan inte laddas upp eftersom den överstiger maximalt tillåten filstorlek (%max_size% KB).'
