--- a/app/Resources/translations/messages.tr.yml
+++ b/app/Resources/translations/messages.tr.yml
@@ -204,3 +204,4 @@ event.file_attached: '"%value%" dosyası eklendi.'
 event.file_deleted: '"%value%" dosyası kaldırıldı.'
 event.subrecord_attached: '"%value%" alt kaydı eklendi.'
 event.subrecord_detached: '"%value%" alt kaydı kaldırıldı.'
+error.file_max_size: 'İzin verilen maksimum dosya boyutunu (%max_size% KB) aştığı için dosya yüklenemedi.'
