--- a/app/Resources/translations/messages.es.yml
+++ b/app/Resources/translations/messages.es.yml
@@ -205,3 +205,4 @@ event.file_deleted: 'El archivo "%value%" fue eliminado.'
 event.subrecord_attached: 'El subregistro "%value%" fue añadido.'
 event.subrecord_detached: 'El subregistro "%value%" fue eliminado.'
 error.file_max_size: 'Este fichero no se puede adjuntar porque excede el tamaño máximo de fichero (%max_size% KB).'
+file.confirm.delete: 'Are you sure you want delete this file?'
