--- a/app/Resources/translations/messages.fr.yml
+++ b/app/Resources/translations/messages.fr.yml
@@ -205,3 +205,4 @@ event.file_deleted: 'Fichier "%value%" enlevé.'
 event.subrecord_attached: 'Subrecord "%value%" ajoute.'
 event.subrecord_detached: 'Subrecord "%value%" enleve.'
 error.file_max_size: 'Ce fichier ne peut pas être attaché car il excède la taille maximale autorisée (%max_size% ko).'
+file.confirm.delete: 'Are you sure you want delete this file?'
