--- a/app/Resources/translations/messages.bg.yml
+++ b/app/Resources/translations/messages.bg.yml
@@ -205,3 +205,4 @@ event.file_deleted: 'Файл "%value%" е премахнат.'
 event.subrecord_attached: 'Подзапис "%value%" е добавен.'
 event.subrecord_detached: 'Подзапис "%value%" е премахнат.'
 error.file_max_size: 'Този файл не може да бъде качен, понеже надхвърля максималната възможна големина (%max_size% KB).'
+file.confirm.delete: 'Are you sure you want delete this file?'
