--- a/app/Resources/translations/messages.cs.yml
+++ b/app/Resources/translations/messages.cs.yml
@@ -205,3 +205,4 @@ event.file_deleted: 'Soubor "%value%" je odstraněn.'
 event.subrecord_attached: 'Podřízený záznam "%value%" byl přidán.'
 event.subrecord_detached: 'Podřízený záznam "%value%" byl odstraněn.'
 error.file_max_size: 'Soubor nemůže být nahrán, protože jeho velikost je větší než maximální (%max_size% KB).'
+file.confirm.delete: 'Are you sure you want delete this file?'
