--- a/app/Resources/translations/messages.de.yml
+++ b/app/Resources/translations/messages.de.yml
@@ -205,3 +205,4 @@ event.file_deleted: 'Datei "%value%" wird entfernt.'
 event.subrecord_attached: 'Unteranfrage wird "%value%" hinzugefügt.'
 event.subrecord_detached: 'Unteranfrage wird von "%value%" entfernt.'
 error.file_max_size: 'Diese Datei kann nicht hochgeladen werden, da sie die maximale Dateigröße von (%max_size% KB) überschreitet.'
+file.confirm.delete: 'Are you sure you want delete this file?'
