--- a/app/Resources/translations/messages.en.yml
+++ b/app/Resources/translations/messages.en.yml
@@ -204,3 +204,4 @@ event.file_deleted: 'File "%value%" is deleted.'
 event.subrecord_attached: 'Subrecord "%value%" is added.'
 event.subrecord_detached: 'Subrecord "%value%" is removed.'
 error.file_max_size: 'This file cannot be uploaded because it exceeds the maximum allowed file size (%max_size% KB).'
+file.confirm.delete: 'Are you sure you want delete this file?'
