--- a/app/Resources/translations/messages.it.yml
+++ b/app/Resources/translations/messages.it.yml
@@ -205,3 +205,4 @@ event.file_deleted: 'Il file "%value%" è stato rimosso.'
 event.subrecord_attached: 'Il subrecord "%value%" è stato aggiunto.'
 event.subrecord_detached: 'Il subrecord "%value%" è stato rimosso.'
 error.file_max_size: 'Questo file non può essere caricato in quanto la sua dimensione supera la massima consentita (%max_size% KB).'
+file.confirm.delete: 'Are you sure you want delete this file?'
