--- a/app/Resources/translations/messages.ja.yml
+++ b/app/Resources/translations/messages.ja.yml
@@ -205,3 +205,4 @@ event.file_deleted: 'ファイル "%value%" が削除されました。'
 event.subrecord_attached: 'サブレコード "%value%" が追加されました。'
 event.subrecord_detached: 'サブレコード "%value%" が削除されました。'
 error.file_max_size: 'このファイルはアップロードできません。添付ファイルサイズの上限(%max_size% KB)を超えています。'
+file.confirm.delete: 'Are you sure you want delete this file?'
