--- a/app/Resources/translations/messages.nl.yml
+++ b/app/Resources/translations/messages.nl.yml
@@ -205,3 +205,4 @@ event.file_deleted: 'Bestand "%value%" is verwijderd.'
 event.subrecord_attached: 'Subrecord "%value%" is toegevoegd.'
 event.subrecord_detached: 'Subrecord "%value%" is verwijderd.'
 error.file_max_size: 'Dit bestand kan niet worden geupload omdat het de maximaal toegestane grootte overschrijd (%max_size% KB).'
+file.confirm.delete: 'Are you sure you want delete this file?'
