--- a/app/Resources/translations/messages.pl.yml
+++ b/app/Resources/translations/messages.pl.yml
@@ -205,3 +205,4 @@ event.file_deleted: 'Plik "%value%" został usunięty.'
 event.subrecord_attached: 'Subrekord "%value%" został dodany.'
 event.subrecord_detached: 'Subrekord "%value%" został usunięty.'
 error.file_max_size: 'Plik nie może być przesłany, ponieważ przekracza maksymalny dopuszczalny rozmial (%max_size% KB).'
+file.confirm.delete: 'Are you sure you want delete this file?'
