--- a/app/Resources/translations/messages.pt_BR.yml
+++ b/app/Resources/translations/messages.pt_BR.yml
@@ -205,3 +205,4 @@ event.file_deleted: 'Arquivo "%value%" removido.'
 event.subrecord_attached: 'Subregistro "%value%" adicionado.'
 event.subrecord_detached: 'Subregistro "%value%" removido.'
 error.file_max_size: 'Este arquivo não pode ser enviado porque excede o tamanho máximo permitido (%max_size% KB).'
+file.confirm.delete: 'Are you sure you want delete this file?'
