--- a/app/Resources/translations/messages.ru.yml
+++ b/app/Resources/translations/messages.ru.yml
@@ -205,3 +205,4 @@ event.file_deleted: 'Файл "%value%" удален.'
 event.subrecord_attached: 'Добавлена подзапись "%value%".'
 event.subrecord_detached: 'Удалена подзапись "%value%".'
 error.file_max_size: 'Этот файл нельзя загрузить из-за превышения максимального размера файла (%max_size% КБ).'
+file.confirm.delete: 'Are you sure you want delete this file?'
