--- a/app/Resources/translations/messages.tr.yml
+++ b/app/Resources/translations/messages.tr.yml
@@ -205,3 +205,4 @@ event.file_deleted: '"%value%" dosyası kaldırıldı.'
 event.subrecord_attached: '"%value%" alt kaydı eklendi.'
 event.subrecord_detached: '"%value%" alt kaydı kaldırıldı.'
 error.file_max_size: 'İzin verilen maksimum dosya boyutunu (%max_size% KB) aştığı için dosya yüklenemedi.'
+file.confirm.delete: 'Are you sure you want delete this file?'
