--- a/app/Resources/translations/messages.en.yml
+++ b/app/Resources/translations/messages.en.yml
@@ -17,6 +17,8 @@ button.export: Export
 button.import: Import
 button.expand: Expand
 button.collapse: Collapse
+button.preview: Preview
+button.send: Send
 button.select_all: 'Select all'
 button.mark_as_read: 'Mark as read'
 button.mark_as_unread: 'Mark as unread'
@@ -203,5 +205,7 @@ event.file_attached: 'File "%value%" is attached.'
 event.file_deleted: 'File "%value%" is deleted.'
 event.subrecord_attached: 'Subrecord "%value%" is added.'
 event.subrecord_detached: 'Subrecord "%value%" is removed.'
+comment: Comment
+comment.private: Private
 error.file_max_size: 'This file cannot be uploaded because it exceeds the maximum allowed file size (%max_size% KB).'
 file.confirm.delete: 'Are you sure you want delete this file?'
