--- a/app/Resources/translations/messages.cs.yml
+++ b/app/Resources/translations/messages.cs.yml
@@ -18,6 +18,8 @@ button.export: Exportovat
 button.import: Importovat
 button.expand: Rozšíření
 button.collapse: Kolaps
+button.preview: Náhled
+button.send: Odeslat
 button.select_all: 'Vybrat vše'
 button.mark_as_read: 'Označit jako přečtené'
 button.mark_as_unread: 'Označit jako nepřečtené'
@@ -204,5 +206,7 @@ event.file_attached: 'Soubor "%value%" je přiložen.'
 event.file_deleted: 'Soubor "%value%" je odstraněn.'
 event.subrecord_attached: 'Podřízený záznam "%value%" byl přidán.'
 event.subrecord_detached: 'Podřízený záznam "%value%" byl odstraněn.'
+comment: Komentář
+comment.private: Soukromý
 error.file_max_size: 'Soubor nemůže být nahrán, protože jeho velikost je větší než maximální (%max_size% KB).'
 file.confirm.delete: 'Are you sure you want delete this file?'
