--- a/app/Resources/translations/messages.hu.yml
+++ b/app/Resources/translations/messages.hu.yml
@@ -18,6 +18,8 @@ button.export: Export
 button.import: Importálás
 button.expand: Bővíteni
 button.collapse: Összeomlás
+button.preview: Előnézet
+button.send: Küldés
 button.select_all: 'Mind kijelölése'
 button.mark_as_read: 'Megjelölés olvasottként'
 button.mark_as_unread: 'Megjelölés olvasatlanként'
@@ -204,5 +206,7 @@ event.file_attached: 'A(z) "%value%" csatolva.'
 event.file_deleted: 'A(z) "%value%" nevű fájl törölve.'
 event.subrecord_attached: 'A(z) "%value%" alrekord létrehozva.'
 event.subrecord_detached: 'A(z) "%value%" alrekord törölve.'
+comment: Megjegyzés
+comment.private: Privát
 error.file_max_size: 'This file cannot be uploaded because it exceeds the maximum allowed file size (%max_size% KB).'
 file.confirm.delete: 'Are you sure you want delete this file?'
