--- a/app/Resources/translations/messages.it.yml
+++ b/app/Resources/translations/messages.it.yml
@@ -18,6 +18,8 @@ button.export: Esporta
 button.import: Importa
 button.expand: Espandi
 button.collapse: Crollo
+button.preview: Anteprima
+button.send: Invia
 button.select_all: 'Seleziona tutto'
 button.mark_as_read: 'Segna come letto'
 button.mark_as_unread: 'Segna come non letto'
@@ -204,5 +206,7 @@ event.file_attached: 'Il file "%value%" è stato allegato.'
 event.file_deleted: 'Il file "%value%" è stato rimosso.'
 event.subrecord_attached: 'Il subrecord "%value%" è stato aggiunto.'
 event.subrecord_detached: 'Il subrecord "%value%" è stato rimosso.'
+comment: Commento
+comment.private: Privato
 error.file_max_size: 'Questo file non può essere caricato in quanto la sua dimensione supera la massima consentita (%max_size% KB).'
 file.confirm.delete: 'Are you sure you want delete this file?'
