--- a/app/Resources/translations/messages.ro.yml
+++ b/app/Resources/translations/messages.ro.yml
@@ -18,6 +18,8 @@ button.export: Exporta
 button.import: Importa
 button.expand: Extinde
 button.collapse: Restrînge
+button.preview: Previzualizare
+button.send: Trimite
 button.select_all: 'Selecteaza toate'
 button.mark_as_read: 'Marcheaza ca citite'
 button.mark_as_unread: 'Marcheaza ca necitit'
@@ -204,5 +206,7 @@ event.file_attached: 'Fisierul "%value%" este atasat.'
 event.file_deleted: 'Fisierul "%value%" este sters.'
 event.subrecord_attached: 'Inregistrarea fiu "%value%" este adaugata.'
 event.subrecord_detached: 'Inregistrarea fiu "%value%" este stearsa.'
+comment: Comentariu
+comment.private: Private
 error.file_max_size: 'This file cannot be uploaded because it exceeds the maximum allowed file size (%max_size% KB).'
 file.confirm.delete: 'Are you sure you want delete this file?'
