--- a/app/Resources/translations/messages.sv.yml
+++ b/app/Resources/translations/messages.sv.yml
@@ -18,6 +18,8 @@ button.export: Exportera
 button.import: Importera
 button.expand: Expandera
 button.collapse: Kollaps
+button.preview: Förhandsgranska
+button.send: Skicka
 button.select_all: 'Markera alla'
 button.mark_as_read: 'Markera som läst'
 button.mark_as_unread: 'Markera som oläst'
@@ -204,5 +206,7 @@ event.file_attached: 'Filen "%value%" är bifogad.'
 event.file_deleted: 'Filen "%value%" är borttagen.'
 event.subrecord_attached: 'Underpost "%value%" är tilllagd.'
 event.subrecord_detached: 'Underpost "%value%" är borttagen.'
+comment: Kommentar
+comment.private: Privat
 error.file_max_size: 'Denna fil kan inte laddas upp eftersom den överstiger maximalt tillåten filstorlek (%max_size% KB).'
 file.confirm.delete: 'Are you sure you want delete this file?'
